--- a/css/mostlyfluid.css
+++ b/css/mostlyfluid.css
@@ -30,6 +30,23 @@ a{
   font-family: 'Patua One', cursive;
 }
 
+/* Message */
+
+.message{
+  position: fixed;
+  top:50%;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+h1{
+  font-family: 'Patua One', cursive;
+  background: white;
+  opacity: 0.7;
+  border-radius: 5px;
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
